added checkbox selection on current result page

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,11 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
+    <title>Public Digital Library</title>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <script type="text/javascript" id="embedUV" src="http://universalviewer.io/uv/lib/embed.js"></script><script type="text/javascript">/* wordpress fix */</script>
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
