--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,17 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
-    <!-- <script type="text/javascript" id="embedUV" src="http://universalviewer.io/uv/lib/embed.js"></script><script type="text/javascript">/* wordpress fix */</script> -->
+<!--
+        <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/uv/uv.css">
+        <script src="%PUBLIC_URL%/uv/lib/offline.js"></script>
+        <script src="%PUBLIC_URL%/uv/helpers.js"></script>
+        <style>
+            #uv {
+                width: 100%;
+                height: 600px;
+            }
+        </style>
+-->
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -33,13 +43,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+
+    <!-- <div id="uv" class="uv"></div> -->
+
     <div id="root"></div>
+
+    <!-- <script src="%PUBLIC_URL%/uv/uv.js"></script> -->
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
