--- a/public/mirador-demo.html
+++ b/public/mirador-demo.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="mirador/css/mirador-combined.css">
+    <link rel="stylesheet" type="text/css" href="src/components/App.css"/>
     <style>
       #viewer {
         width: 100%;
@@ -15,7 +16,7 @@
       .jstree-default .jstree-anchor {  line-height: 42px; height: 42px;  font-size: 20px; }
       .jstree-default .jstree-icon:empty { line-height: 42px;  padding-right: 4px; }
       .jstree-icon.jstree-ocl { vertical-align: -16px; }
-      #collection-tree { width: 25%;  max-width: 10000px; }
+      #collection-tree.jstree { width: 25%;  max-width: 10000px; }
       .member-select-results { margin-left: 25%; }
 
       .mirador-container .scroll-view { overflow-y:auto; }
@@ -27,30 +28,27 @@
   </head>
   <body>
     <div id="viewer"></div>
-    <script type="text/javascript">
-
-      let getCollectionLabel = (label) =>
-      {
-        return !Array.isArray(label)?label:label.map( e => (e["@value"]?e["@value"]+"@"+e["@language"]:e)).join("; ")
-     }
+    <script type="module" src="./miradorInit.js"></script>
+    <script>
+/*
 
       $(function() {
         Mirador({
-          id: "viewer",
-	  showAddFromURLBox:false,
-	  openManifestsPage: true,
-	  preserveManifestOrder: true,
-	  bottomPanel: false,
-	  sidePanel: false,
-	  annotationLayer: false,
-          "windowSettings": {
-	    "sidePanelVisible": false
+           id: "viewer",
+      	  showAddFromURLBox:false,
+      	  openManifestsPage: true,
+      	  preserveManifestOrder: true,
+      	  bottomPanel: false,
+      	  sidePanel: false,
+      	  annotationLayer: false,
+           "windowSettings": {
+	        "sidePanelVisible": false
           },
 	  "manifestsPanel": {
 	     "name": "Collection Tree Manifests Panel",
 	     "module": "CollectionTreeManifestsPanel",
 	     "options": {
-           labelToString: (label) => (!Array.isArray(label)?label:label.map( e => (e["@value"]?e["@value"]+"@"+e["@language"]:e)).join("; "))             
+           labelToString: (label) => (!Array.isArray(label)?label:label.map( e => (e["@value"]?e["@value"]+"@"+e["@language"]:e)).join("; "))
          }
 	   },
            "data": [
@@ -58,6 +56,7 @@
         ]
         });
       });
+      */
     </script>
   </body>
 </html>
