small fix for mirador demo

--- a/public/mirador-demo.html
+++ b/public/mirador-demo.html
@@ -20,9 +20,9 @@
     <script src="mirador/mirador.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/requirejs@2.3.6/require.js"></script>
-    <script type="module" src="/modules/jsewts/src/jsewts.js"></script>
-    <script type="module" src="/src/lib/transliterators.js"></script>
-    <script type="module" src="/src/lib/miradorSetup.js"></script>
+    <script type="module" src="modules/jsewts/src/jsewts.js"></script>
+    <script type="module" src="src/lib/transliterators.js"></script>
+    <script type="module" src="src/lib/miradorSetup.js"></script>
     <script type="module" src="./miradorInit.js"></script>
     <script>
 /*
