--- a/public/mirador-demo.html
+++ b/public/mirador-demo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="mirador/css/mirador-combined.css">
-    <link rel="stylesheet" type="text/css" href="src/components/App.css"/>
+    <link rel="stylesheet" type="text/css" href="src/lib/mirador.css"/>
     <style>
          #collection-tree.jstree { width: 25%;  max-width: 10000px; }
          #collection-tree + .member-select-results { margin-left: 25%; }
