add documentation to embed viewer

--- a/public/mirador-demo.html
+++ b/public/mirador-demo.html
@@ -6,12 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="mirador/css/mirador-combined.css">
     <link rel="stylesheet" type="text/css" href="src/lib/mirador.css"/>
-    <style>
-         .user-buttons.mirador-main-menu li:last-child { display:none; }
-    </style>
   </head>
   <body>
-    <div id="viewer"></div>
+    <div id="viewer" class="demo"></div>
     <script src="mirador/mirador.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/requirejs@2.3.6/require.js"></script>
