--- a/public/embed-iframe.html
+++ b/public/embed-iframe.html
@@ -10,6 +10,7 @@
   <body>
     <div id="viewer" class="demo"></div>
     <script src="mirador/mirador.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@dbmdz/mirador-keyboardnavigation@1.1.0/keyboardNavigation.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/requirejs@2.3.6/require.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jsewts@1.0.2/src/jsewts.min.js"></script>
