update favicon with new logo

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <title>Public Digital Library</title>
+    <title>BUDA - Buddhist Digital Archives</title>
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json"> -->
 
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
@@ -21,6 +21,7 @@
     <meta name="application-name" content="Public Digital Library">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+
 
 <!--
         <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/uv/uv.css">
