--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <meta name="application-name" content="BUDA">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <meta name="description" content="The Buddhist Digital Archives by the Buddhist Digital Resource Center. A cooperative platform for expanding access to Buddhist literature. Explore the millions of pages of texts contributed by BDRC and its many partners.">
 
 
 <!--
