--- a/public/embed-iframe.html
+++ b/public/embed-iframe.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="src/lib/mirador.css"/>
   </head>
   <body>
-    <div id="viewer" class="demo"></div>
+    <div id="viewer" class="demo embed"></div>
     <script src="mirador/mirador.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@dbmdz/mirador-keyboardnavigation@1.1.0/keyboardNavigation.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
