finish About static page en/zh (#313)

--- a/public/static/about.zh.html
+++ b/public/static/about.zh.html
@@ -1,1 +1,17 @@
-佛教数字档案馆（BUDA）简介
+
+<h3>佛教数字档案馆（BUDA）简介</h3>
+
+<p>BDRC和浙江大学佛教资源与研究中心合作开发了佛教文献的合作共享平台——佛教数字档案馆（BUDA），以造福学术界、佛教界和对佛教文献感兴趣的众多用户。凭借新的功能和创新的设计，BUDA极大地改善了汉语、梵语、藏语、巴利语、缅甸语和高棉语等多语种佛教文献的访问便捷度。BUDA是开源的，并尽最大可能提供开放访问。BUDA的文献资源由BDRC及其合作伙伴提供。 何鸿毅家族基金会为BUDA的研发创建提供了慷慨资助。</p>
+<p>BUDA提供了先进的多语种搜索功能，用户可以自定义查询，还可以直接从BDRC的档案中下载自定义的数据集。BUDA还提供了各种工具以方便研究和促进对佛教文本的深度参与。BUDA是一个使用开放标准的开源平台，是一个可供任何项目使用的平台。文档和安装说明可在我们的<a href="https://github.com/buda-base">GitHub页面</a>上找到。</p>
+<p>支持BUDA平台的两项主要技术是“国际图像互操作性框架”（IIIF）和“关联开放数据”（Linked Open Data）。</p>
+<p>IIIF是一套用于显示和共享在线图像的技术标准。IIIF正在被世界各地的主要图书馆、博物馆和研究机构采用，因为正如IIIF联盟网站上所阐述的那样，它旨在提供“对图像资源的前所未有的统一和丰富的访问方式”。BUDA使用IIIF标准来提供和显示其图像，并为用户提供功能丰富的界面。通过BUDA的IIIF界面，用户可以下载、共享、嵌入和注释图像。</p>
+<p>除了使用IIIF外，BUDA还依靠BDRC专门为佛教文献开发的新的“关联开放数据”（Linked Open Data）架构。该架构是一种构建数据信息的方法，以使数据可被机器读取。这意味着计算机可以更少依赖人工来理解、处理和使用数据。这种方法可以生成方便提取、查询、链接和更新的数据集。使用“关联开放数据”的数据集也可以导出为一个单一的、自足的文件，为长期保存提供方便。越来越多的数字人文项目和图书馆都在采用“关联开放数据”，因为它允许在不同的数据库之间进行联系，创建一个丰富的相互关联的资源网络。</p>
+<p>BUDA的关联开放数据模式旨在描述佛教文化遗产的核心方面——何人、何事、何时、何地，并包括一个丰富的学术模型，用于识别跨语种的文本。关联开放数据不是通常的链接网页的方式，而是让档案馆有能力在数据本身的层面上连接资源。通过创建一个信息枢纽，并提供广泛的、直接的访问，BUDA将为佛教研究的全球学术网络注入活力并参与其中。
+</p>
+
+<h3>BDRC简史</h3>
+
+<p>佛教数字资源中心（BDRC）是一家致力于佛教文献的搜寻、保存、编目和分享的非营利性组织。BDRC的前身是由金·史密斯（1936-2010）在1999年创立的藏传佛教资源中心（TBRC）。自创立以来，它已经数字化保存、整理编目和存档超过2000万页的佛经、论著、修行仪轨文等重要佛教文献。BDRC致力于将这些文献资源永久保存，以便让世界任何一个地方的人们都可以免费并轻松访问它们。</p>
+<p>在金·史密斯的前瞻愿景的指引下，BDRC将曾经濒危的藏文文献资源提升到一个高级保存状态。如今，BDRC的馆藏文献已成为藏学研究的重要资源，服务于全球的学者、宗教人士、译者、出版界以及其他对佛教文献感兴趣的公众。</p>
+<p>2015年，应董事会以及我们在佛教研究领域的合作伙伴们的要求，藏传佛教资源中心（TBRC）扩大其使命，于2016年正式更名为佛教数字资源中心（BDRC）。除了继续金·史密斯开创的事业，BDRC致力于保存并传播由于社会与环境变迁而濒临遗失的所有语种的佛教文化宝藏。BDRC将运用其二十多年所积累的技术优势和学术资源来应对这项紧迫的任务。</p>
+
