fix pdf download url (#406)

--- a/public/embed-iframe.html
+++ b/public/embed-iframe.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="mirador/css/mirador-combined.css">
     <link rel="stylesheet" type="text/css" href="src/lib/mirador.css"/>
+    <style>
+      /*
+      @media only screen and (orientation:portrait) and (max-width:480px){
+        body {
+          width: 100vh;
+          height: 100vw;
+          transform: rotate(90deg) translateY(-100vw);
+          transform-origin: 0px 0px;
+        }
+      }
+      */
+    </style>
   </head>
   <body>
     <div id="viewer" class="demo embed"></div>
