--- a/public/embed-iframe.html
+++ b/public/embed-iframe.html
@@ -3,7 +3,7 @@
   <head>
     <title>Demo Viewer</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, max-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" type="text/css" href="mirador/css/mirador-combined.css">
     <link rel="stylesheet" type="text/css" href="src/lib/mirador.css"/>
     <style>
