add unAPI information (#504)

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
     <!-- <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest"> -->
     <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="unapi-server" type="application/xml" title="unAPI" href="https://ldspdi.bdrc.io/UNAPI" />
     <meta name="apple-mobile-web-app-title" content="BUDA">
     <meta name="application-name" content="BUDA">
     <meta name="msapplication-TileColor" content="#da532c">
