--- a/public/embed-iframe.html
+++ b/public/embed-iframe.html
@@ -14,6 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/requirejs@2.3.6/require.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jsewts@1.0.2/src/jsewts.min.js"></script>
+    <script>var exports = {}; </script>
     <script type="module" src="src/lib/transliterators.js"></script>
     <script type="module" src="src/lib/miradorSetup.js"></script>
     <script type="module" src="./miradorInit.js"></script>
