--- a/public/static/aboutkm.en.html
+++ b/public/static/aboutkm.en.html
@@ -1,1 +1,107 @@
-<h3>About us</h3>
+<header>
+  <img src="/scripts/static/images/aboutkm.jpg"/>
+  <div>
+    <h1>Khmer cultural   knowledge</h1>  
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing   elit. Morbi ut efficitur dui. Etiam mattis tellus dui, a   luctus enim placerat ac. </p>
+  </div>
+</header>
+
+<section class="white-bg">
+  <div>
+    <div class="baseline">
+      <h2 class="small">Introduction</h2>
+      <p>Cambodia's manuscript heritage is a priceless storehouse of Khmer cultural knowledge, Buddhist   scholarship, and artistic achievement.</p>
+    </div>
+  </div>
+</section>
+
+<section class="orange-gradient">
+  <div>
+    <div>
+      <img src="/scripts/static/images/pictoDonate.svg"/>
+      <div>
+        <span>Learn How You Can<br/>Support BDRC</span>
+        <a href="https://bdrc.io/donation/">Donation</a>
+      </div>
+    </div>
+    <div>
+      <img src="/scripts/static/images/pictoLibrary.svg"/>
+      <div>
+        <span>Explore our library<br/>and access the BUDA platform</span>
+        <a href="https://library.bdrc.io/">Archive</a>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="white-bg">
+  <div>
+    <h2>History</h2>
+    <div class="col">
+      <p>For hundreds of years Cambodia's traditional   manuscripts conserved and transmitted Khmer   literature, history, science, religion, medicine, and   more. Sadly, a large number of these texts—95% to 98%   of the country's traditional manuscripts—were   destroyed during the tumultuous 1970s and 1980s.    As a result, much of the knowledge contained in those   manuscripts was lost, dealing a blow to Cambodia's rich   cultural heritage. </p>
+      <p>Through the efforts of the Fonds pour l’Edition des   Manuscrits du Cambodge (Fund for the Preservation of   Cambodian Manuscripts, or FEMC), a project of the   École française d’Extrême-Orient (French School of   Asian Studies, or EFEO) from 1990–2012, tens of   thousands of Cambodia’s surviving manuscripts were   located and cataloged. When possible, these   manuscripts were captured on microfilm or digitized.</p>
+      <div class="img-caption border">
+        <span>
+          <img src="/scripts/static/images/history_1-1.jpg"/>
+        </span>
+        <p>Filmed copies of manuscripts as viewed on the old microfilm machines   at the FEMC office.</p>
+      </div>
+    </div>
+    <div class="col">
+      <p>Unfortunately, many of these digitized manuscripts are   illegible due to the primitive technology available at the   time. Additionally, approximately thirty percent of the   manuscripts microfilmed by FEMC have now   disappeared from their original locations, meaning   FEMC’s microfilm copies are the last records of their   existence.  </p>
+      <div class="img-caption">
+        <img src="/scripts/static/images/history_1-2.jpg"/>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vel   placerat lorem. Vivamus auctor leo id ex sollicitudin, in efficitur sapien   volutpat. </p>
+      </div>
+      <div class="img-caption border">
+        <span>
+          <img src="/scripts/static/images/history_1-3.jpg"/>
+        </span>
+        <p>Digitized and processed images of the filmed manuscripts as viewed in   BDRC’s BUDA image viewer.<span class="note">[d]</span></p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section>
+  <div>
+    <h2  class="small">In 2019</h2>
+    <div class="col">
+      <p>BDRC recognized the extremely urgent need to   document and preserve these manuscripts and, as    the world’s largest digital repository of Buddhist texts,   was uniquely well-positioned to carry out such work.</p>
+      <p>With generous funding from the Khmer Buddhist   Temple Foundation, BDRC launched an ambitious   project to digitize and archive the surviving   manuscripts. Thanks to the support of BDRC’s local   project partners, Digital Divide Data and the FEMC,    in just two years The Khmer Manuscript Heritage   Project has now secured digital copies of the surviving   texts for the benefit of future generations and is now   making them freely available to all. Copies of all X<span class="note">[e]</span> digitized manuscripts have been deposited with the   Ministry of Culture[f] and the EFEO and BDRC maintains   this website to ensure free public access to the   manuscripts in perpetuity.</p>
+      <p>We are especially indebted to: Kun Sopheap, Leng Kok   An, Mech Khoeun, Chhom Kunthea, Suon Kosal, Suong   Sereykhosal, Vann Narith, Trent Walker, and Alexis   Lecoq. Without their dedicated work, this project would   not have been possible. </p>
+    </div>
+    <div class="col baseline">
+      <div class="img-caption">
+        <img src="/scripts/static/images/history_2-1.jpg"/>
+        <p>The FEMC building in the Wat Ounalom temple compound. </p>
+      </div>
+      <div class="img-caption border">
+        <span>
+          <img src="/scripts/static/images/history_2-2.jpg"/>
+        </span>
+        <p>Deteriorating palm-leaf folio that was encapsulated by the FEMC to   prevent further damage.</p>
+      </div>
+    </div>
+  </div>
+</section>
+  
+  
+<section class="footnote white-bg">
+  <div>
+    <div>
+      <span class="noteText"><span class="note">[a]</span>Lorem ipsum dolor sit amet</span>
+      <span class="noteText"><span class="note">[b]</span>Consectetur adipiscing elit. </span>
+    </div>
+    <div>
+      <span class="noteText"><span class="note">[c]</span>Need current title and check name</span>
+      <span class="noteText"><span class="note">[d]</span>This photo looks better not squeezed into a Google Doc,    where it can be viewed at a larger size and the difference    between the microfilm and the BUDA version is more apparent.</span>
+    </div>
+    <div>
+      <span class="noteText"><span class="note">[e]</span>Lorem ipsum dolor sit amet</span>
+      <span class="noteText"><span class="note">[f]</span>Need official name</span>
+    </div>
+  </div>
+</section>
