--- a/public/static/resources.en.html
+++ b/public/static/resources.en.html
@@ -1,1 +1,7 @@
-<h3>Resources</h3>
+<header>
+  <img src="/scripts/static/images/aboutkm.jpg"/>
+  <div>
+    <h1>Resources</h1>  
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing   elit. Morbi ut efficitur dui. Etiam mattis tellus dui, a   luctus enim placerat ac. </p>
+  </div>
+</header>
