update topbar + images + 'coming soon' (#604)

--- a/public/static/resources.en.html
+++ b/public/static/resources.en.html
@@ -1,7 +1,7 @@
 <header>
-  <img src="/scripts/static/images/aboutkm.jpg"/>
+  <img src="/pichome_khmer.jpg" style="height:400px;object-fit: cover;"/>
   <div>
     <h1>Resources</h1>  
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing   elit. Morbi ut efficitur dui. Etiam mattis tellus dui, a   luctus enim placerat ac. </p>
+    <p>Coming soon </p>
   </div>
 </header>
