--- a/public/static/aboutkm.en.html
+++ b/public/static/aboutkm.en.html
@@ -1,8 +1,8 @@
 <header>
   <img src="/scripts/static/images/aboutkm.jpg"/>
   <div>
-    <h1>Khmer cultural   knowledge</h1>  
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing   elit. Morbi ut efficitur dui. Etiam mattis tellus dui, a   luctus enim placerat ac. </p>
+    <h1>Khmer cultural knowledge</h1>  
+    <p>Coming soon </p>
   </div>
 </header>
 
