fixes for /home and /about (#604)

--- a/public/static/aboutkm.en.html
+++ b/public/static/aboutkm.en.html
@@ -1,5 +1,5 @@
 <header>
-  <img src="/scripts/static/images/aboutkm.jpg"/>
+  <img src="/scripts/static/images/aboutkm2.jpg"/>
   <div>
     <h1>Khmer Manuscript Heritage Project</h1>  
     <p>Cambodia's manuscript heritage is a priceless storehouse of Khmer cultural knowledge, Buddhist scholarship, and artistic achievement.</p>
@@ -27,7 +27,8 @@
     <div>
       <img src="/scripts/static/images/pictoLibrary.svg"/>
       <div>
-        <span>Explore our library<br/>and access the BUDA platform</span>
+        <!-- <span>Explore our library<br/>and access the BUDA platform</span> -->
+        <span>Explore our full library and access the BUDA platform for texts from Southeast Asia, East Asia, and around the globe.</span>
         <a href="https://library.bdrc.io/">Archive</a>
       </div>
     </div>
