--- a/public/scripts/offlinePDFaccess.html
+++ b/public/scripts/offlinePDFaccess.html
@@ -19,6 +19,14 @@
       if(h) host = h
       if(!host.startsWith("http")) host = "http://"+host
       var loca = host+"?useDLD=true"
+      var u = params.get("url");
+      if(u) {
+        loca = decodeURIComponent(u) 
+        if(loca.match(/[?][^?]/)) loca +="&"
+        else loca += "?"
+        loca += "useDLD=true"
+      }
+      
 
       // no need
       //var loca = host+"?useDLD="+encodeURIComponent(window.location.pathname.replace(/[^/]*?$/,""))
@@ -38,21 +46,37 @@
       var close = document.querySelector("nav#top #close")
       var pdf = document.querySelector("iframe#pdf")
       var BUDA = document.querySelector("iframe#BUDA")
+
       BUDA.src = loca
       
-      window.addEventListener("message", function (e) {              
+      window.addEventListener("message", async function (e) {              
         console.log("msgEv:",e);
-        if (e.data?.startsWith("open-viewer:")) {
-          var data = e.data.split(":")
-          console.log("data:",data,tree)
-
-          if(tree && tree[data[1]] && tree[data[1]].length){
-            pdf.src = tree[data[1]][0]
+        var data = await JSON.parse(e.data)
+        console.log("data:",data,tree)
+        if (data["open-viewer"]) {
+          if(tree && tree[data["open-viewer"].rid] && tree[data["open-viewer"].rid].length){
+            pdf.src = tree[data["open-viewer"].rid][0]
             pdf.className = "on"
             BUDA.className = "off"
             nav.className = "on"
           } 
-        }        
+        } else if(data.url) {
+          let nextURL = host + data.url.path + data.url.search;          
+          let search = window.location.search.replace(/([&?])url=[^&]+/,"")
+          if(search && search.match(/^[?][^?]/)) search += "&"
+          else search = "?"
+          search += "url="+encodeURIComponent(nextURL)
+          nextURL = window.location.pathname + search
+
+          const nextTitle = 'no title yet';
+          const nextState = { };
+
+          console.log("nextURL:"+nextURL, nextTitle)
+
+          window.history.pushState(nextState, nextTitle, nextURL);
+
+
+        }
       }, true);
 
       close.addEventListener("click",function(){
