--- a/public/scripts/offlinePDFaccess.html
+++ b/public/scripts/offlinePDFaccess.html
@@ -1,6 +1,12 @@
 <html>
   <head> 
     <style>
+
+      @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@500;600&display=swap');
+
+      nav #breadcrumbs #close::before,
+      nav * { font-family: "Noto Sans", "Noto Serif Khmer", "Noto Sans Mongolian", "Roboto", "Helvetica", "Arial", sans-serif;  }
+
       body { margin:0; }
       iframe { border:none; width:100%;height:100%;position:fixed; box-sizing: border-box; display:block; opacity:0; pointer-events: none;}
       nav { width:100%;height:80px;position:fixed; box-sizing: border-box; opacity:0; pointer-events: none;top:0;left:0;
@@ -8,6 +14,28 @@
       }
       .on { opacity:1;pointer-events:auto; }
       iframe#pdf { top:80px; bottom:0;  }
+
+      nav a { text-decoration: none; font-size: 0; display: inline-block; }
+      nav { width:100%; height:80px; position:fixed;top:0;left:0;background:white; display:flex;align-items: center; justify-content: center;
+        box-shadow: 0 2px 4px rgba(187, 187, 187, 0.5); z-index:100010; 
+      }
+      nav > div { width:1222px; display:flex;justify-content: space-between;align-items:center; max-width:100%;}
+      nav #logo { display: flex;  align-items: center; }
+      nav #logo a { display: inline-block; margin-right: 15px; }
+      nav #logo > a:first-child img {  height: 65px;  display: inline-block;  margin-right: 10px; }
+      nav #logo > a:first-child * {  vertical-align: middle; }
+      nav #logo a#BDRC span, nav #logo a:last-child span, nav #logo a:first-child span {  font-size: 24px;  line-height: 26px; font-weight: 500; }
+
+      nav #logo #by span {padding-top: 7px; text-transform: none; letter-spacing: 1px;  font-weight: 600; }
+
+      nav #breadcrumbs #close::before,
+      nav a > span {font-weight: 700;  font-size: 14px; letter-spacing: 0.29px; text-transform: uppercase; text-decoration: none;  color: #192229;  display: inline-block; }
+
+      nav #logo a#BDRC + a img { height: 40px; }
+
+      nav #breadcrumbs #close::before { content: '<';  padding-right: 10px; } 
+      nav #breadcrumbs #close { cursor: pointer;} 
+
     </style>
     <script src="./tree.js"></script>
     <script>
@@ -39,8 +67,21 @@
   </head>
   <body>
     <iframe id="BUDA" class="on" src="https://library.bdrc.io"></iframe>    
-    <nav id="top" >
-      <span id="close">close</span>
+    <nav id="top" class="on">
+      <div>
+        <div id="logo">
+          <a href="/" id="buda">
+              <img src="https://library.bdrc.io/icons/BUDA-small.svg">
+              <span>BUDA</span>
+          </a>
+          <a id="by"><span>by</span></a>
+          <a href="https://bdrc.io/" target="_blank" id="bdrc"><span>BDRC</span></a>
+          <a href="https://bdrc.io" target="_blank"><img src="https://library.bdrc.io/BDRC-Logo_.png"></a>
+        </div>
+        <div id="breadcrumbs">
+          <a id="close" class="active"><span>return to BUDA</span></a>
+        </div>
+      </div>
     </nav>
     <iframe id="pdf" ></iframe>
     <script>
