add Availability on DLD facet (#734)

--- a/public/scripts/offlinePDFaccess.html
+++ b/public/scripts/offlinePDFaccess.html
@@ -35,7 +35,7 @@
       </div>
     </nav>
     <iframe id="pdf" ></iframe>
-    <script src="http://localhost:3000/scripts/offlinePDFaccess.js"></script>
-    <!-- <script src="https://library.bdrc.io/scripts/offlinePDFaccess.js"></script>     -->
+    <!-- <script src="http://localhost:3000/scripts/offlinePDFaccess.js"></script> -->
+    <script src="https://library.bdrc.io/scripts/offlinePDFaccess.js"></script>    
   </body>
 </html>
