minor fixes + responsive

--- a/public/static/user-guide/index.en.html
+++ b/public/static/user-guide/index.en.html
@@ -4097,11 +4097,11 @@
         only the first 20 are listed. To see all of them, select </span><span class="c2">see 10
         more</span><span>&nbsp;and
         then </span><span class="c2">Browse all</span><span class="c0">.</span></p>
-    <h3 class="c13" id="h.5j9jzcw9xxry"><span
+    <p class="c13" id="h.5j9jzcw9xxry"><span
         style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 604.00px;"><img
           alt="" src="images/image32.gif"
           style="width: 624.00px; height: 604.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-          title=""></span></h3>
+          title=""></span></p>
     <h3 class="c13" id="h.y4qnijaxans6"><span class="c17">Related Resources</span></h3>
     <p class="c3"><span class="c0">This section includes all of the texts in BUDA that are about, or have sections
         about,
