--- a/public/static/user-guide/index.bo.html
+++ b/public/static/user-guide/index.bo.html
@@ -1,7 +1,7 @@
 
 
 <div class="doc-content bo">
-  <div class="index">
+  <div class="index"><div>
     <p><a target="content" href="../budax/howtoguides/BDR06/index.bo.html">ཐོག་མའི་ཐོ་འགོད་བྱ་ཚུལ།</a></p>
     <p><a target="content" href="../budax/howtoguides/BDR07/index.bo.html">དཔེ་ཀློག་བྱ་ཚུལ།</a></p>
     <p><a target="content" href="../budax/howtoguides/BDR08/index.bo.html">བཤེར་པར་ཕབ་ལེན་བྱ་ཚུལ།</a></p>
@@ -14,7 +14,7 @@
     <p><a target="content" href="../budax/howtoguides/BDR15/index.bo.html">པར་དབང་ཅན་གྱི་དཔེ་ཆ་བལྟ་ཀློག་བྱ་ཚུལ།</a></p>
     <p><a target="content" href="../budax/howtoguides/BDR16/index.bo.html">མཚན་བྱང་སྤྱད་དེ་འཚོལ་ཚུལ།</a></p>
     <p><a target="content" href="../budax/howtoguides/BDR17/index.bo.html">ཚོགས་པའི་དྲ་ཚིགས་ནང་སྨོན་ལམ་ཚིག་མཛོད་བཀོལ་ཚུལ།</a></p>
-  </div>
+  </div></div>
   <div>
     <iframe name="content" src="../budax/howtoguides/BDR06/index.bo.html"></iframe>
   </div>
