fix external links

--- a/public/static/user-guide/index.en.html
+++ b/public/static/user-guide/index.en.html
@@ -4117,7 +4117,7 @@
     <h1 class="c19" id="h.mnjb574f1fiq"><span class="c16">How to Find a Collection</span></h1>
     <p class="c3"><span>BUDA has </span><span class="c20"><a class="c8"
           target="_blank"
-          href="https://www.google.com/url?q=https://library.bdrc.io/all-collections?t%3DProduct%26s%3Dtitle&amp;sa=D&amp;source=editors&amp;ust=1680254959021692&amp;usg=AOvVaw2E3KpET3vDJqkJn4sLeZsE">more
+          href="https://library.bdrc.io/all-collections?t=Product&s=title">more
           than 100 collections</a></span><span class="c0">&nbsp;that represent libraries, personal collections, and
         more,
         allowing you to search and browse within these collections without leaving BUDA. </span></p>
@@ -4150,7 +4150,7 @@
     <p class="c3"><span class="c2">Note 2</span><span>: You can also browse our full list of collections </span><span
         class="c20"><a class="c8"
           target="_blank"
-          href="https://www.google.com/url?q=https://library.bdrc.io/all-collections?t%3DProduct%26s%3Dtitle&amp;sa=D&amp;source=editors&amp;ust=1680254959023663&amp;usg=AOvVaw0SsSefvQROEELk3PyOIe69">here</a></span><span>.</span>
+          href="https://library.bdrc.io/all-collections?t=Product&s=title">here</a></span><span>.</span>
     </p>
     <h2 class="c5" id="h.7pe2v5hze8p7"><span class="c6">Navigating a Collection Record</span></h2>
     <p class="c3"><span>Collection records have two main areas of interest: the
@@ -4191,7 +4191,7 @@
           only see materials with fully accessible texts and images. You can read more about BDRC&#39;s access policies
         </span><span class="c20"><a class="c8"
             target="_blank"
-            href="https://www.google.com/url?q=https://www.bdrc.io/access-policies/&amp;sa=D&amp;source=editors&amp;ust=1680254959026418&amp;usg=AOvVaw3x7QTF_VcSdqPYtL8Mxulb">here</a></span><span
+            href="https://www.bdrc.io/access-policies/">here</a></span><span
           class="c0">.</span></li>
       <li class="c1 li-bullet-0"><span class="c2">Relation Type</span><span>&nbsp;enables you to filter the results
           between a collection and its members.</span></li>
