fix last 'e-text' typo + revert transifex

--- a/public/static/user-guide/index.en.html
+++ b/public/static/user-guide/index.en.html
@@ -5331,7 +5331,7 @@
           target="_blank"
           href="https://www.dalailama.com/news/2022/launch-of-monlam-grand-tibetan-dictionary">Monlam
           Grand Tibetan Dictionary</a></span><span class="c0">&nbsp;comprises 200,000 entries in 223 volumes and is the
-        most authoritative Tibetan language dictionary. Having it inside the etext view makes it easy to look up words
+        most authoritative Tibetan language dictionary. Having it inside the e-text view makes it easy to look up words
         and
         gain a richer appreciation of a text&#39;s meaning.</span></p>
     <h3 class="c24" id="h.u2050pki1u4z"><span class="c7">Opening the Dictionary</span></h3>
