--- a/public/static/user-guide/index.bo.html
+++ b/public/static/user-guide/index.bo.html
@@ -7,7 +7,7 @@
     <p><a target="content" href="/static/budax/howtoguides/BDR08/index.bo.html">བཤེར་པར་ཕབ་ལེན་བྱ་ཚུལ།</a></p>
     <p><a target="content" href="/static/budax/howtoguides/BDR09/index.bo.html">ཡིག་རྐྱང་ཕབ་ལེན་བྱ་ཚུལ།</a></p>
     <p><a target="content" href="/static/budax/howtoguides/BDR10/index.bo.html">ཡིག་རྐྱང་བཀོལ་ཚུལ།</a></p>
-    <p><a target="content" href="/static/budax/howtoguides/BDR11/index.bo.html">རྩོམ་པ་བོའི་མིང་བྲིས་ཏེ་འཚོལ་ཚུལ།</a></p>
+    <p><a target="content" href="/static/budax/howtoguides/BDR11/index.bo.html">རྩོམ་པ་པོའི་མིང་བྲིས་ཏེ་འཚོལ་ཚུལ།</a></p>
     <p><a target="content" href="/static/budax/howtoguides/BDR12/index.bo.html">མི་སྣ་འཚོལ་ཞིབ་བྱ་ཚུལ།</a></p>
     <p><a target="content" href="/static/budax/howtoguides/BDR13/index.bo.html">ས་གནས་འཚོལ་ཞིབ་བྱ་ཚུལ།</a></p>
     <p><a target="content" href="/static/budax/howtoguides/BDR14/index.bo.html">བརྗོད་གཞིའི་ཐོག་ནས་འཚོལ་ཚུལ།</a></p>
