--- a/public/static/user-guide/index.en.html
+++ b/public/static/user-guide/index.en.html
@@ -4255,6 +4255,7 @@
         digitized and more than 31 million pages made freely available to the public. We also have a treasure trove of
         Person and Place data, as well as an ever-growing corpus of e-texts. Please read on to learn how to find a text,
         how to download it, how to search for its author&rsquo;s other works, and much more. </span></p>
+    <p class="c1"><span></span>You can browse our library without an account but you do need an account to download texts. If you haven’t already done so, please register for a free account on BDRC/BUDA. Choose a password and an email address, which we will use to authenticate your account. OR you can simply sign up using your existing Apple, Google, or Baidu account.</span></p>
     <h1 class="c12" id="h.nltah9bgu0tk"><span>How to Find a Text</span></h1>
     <p class="c1"><span class="c0">BDRC&#39;s archives contain millions of pages of texts, and when paired with the
         powerful search engine and library platform BUDA, it is possible to rapidly identify the text you are looking
