--- a/public/scripts/test-iframe.html
+++ b/public/scripts/test-iframe.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="http://localhost:3000/scripts/mirador/css/mirador-combined.css">
-    <link rel="stylesheet" type="text/css" href="http://localhost:3000/scripts/src/lib/mirador.css"/>
+    <link rel="stylesheet" type="text/css" href="https://library.bdrc.io/scripts/mirador/css/mirador-combined.css">
+    <link rel="stylesheet" type="text/css" href="https://library.bdrc.io/scripts/src/lib/mirador.css"/>
   </head>
   <body>
     <div id="viewer" class="demo embed"></div>
-    <script src="http://localhost:3000/scripts/mirador/mirador.js"></script>
+    <script src="https://library.bdrc.io/scripts/mirador/mirador.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@dbmdz/mirador-keyboardnavigation@1.1.0/keyboardNavigation.min.js"></script>      
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/requirejs@2.3.6/require.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jsewts@1.0.2/src/jsewts.min.js"></script>
-    <script type="module" src="http://localhost:3000/scripts/src/lib/transliterators.js"></script>
-    <script type="module" src="http://localhost:3000/scripts/src/lib/miradorSetup.js"></script>
+    <script type="module" src="https://library.bdrc.io/scripts/src/lib/transliterators.js"></script>
+    <script type="module" src="https://library.bdrc.io/scripts/src/lib/miradorSetup.js"></script>
     <script type="module">
       let miradorConfig, miradorSetUI
       async function init() {
