--- a/public/static/user-guide/index.en.html
+++ b/public/static/user-guide/index.en.html
@@ -4268,7 +4268,7 @@
     <h1 class="c12" id="buda2.0"><span>BUDA 2.0: Easier Searching, Improved Etext Experience</span></h1>
     
     <p class="c1"><span class="c0">
-    We're thrilled to announce a major update to the Buddhist Digital Resource Center's digital library, BUDA! Explore the new beta version at <a class="c4" href="/" target="_blank">library.bdrc.io</a> and share your feedback—it's essential to helping us improve. This update is based on your valuable input, and we're excited to share five key new features.
+    We're thrilled to announce a major update to the Buddhist Digital Resource Center's digital library, BUDA! Explore the new version at <a class="c4" href="/" target="_blank">library.bdrc.io</a> and share your feedback—it's essential to helping us improve. This update is based on your valuable input, and we're excited to share five key new features.
     </span></p>
 
     <h2 class="c5" id="buda2.0-1"><span>      
